# api/docs/swagger.json
@@ -4,9 +4,42 @@
         "contact": {}
     },
     "paths": {
+        "/direct-chat": {
+            "put": {
+                "tags": [
+                    "Chat"
+                ],
+                "summary": "Update direct chat with another user.",
+                "parameters": [
+                    {
+                        "description": "Direct chat options.",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/main.UpdateDirectChatDto"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Direct chat created.",
+                        "schema": {
+                            "$ref": "#/definitions/main.UpdateDirectChatResultDto"
+                        }
+                    },
+                    "204": {
+                        "description": "Changes applied to direct chat."
+                    }
+                }
+            }
+        },
         "/login": {
             "post": {
                 "description": "Generates the access-token cookie.",
+                "tags": [
+                    "User"
+                ],
                 "summary": "Authenticate",
                 "parameters": [
                     {
@@ -28,6 +61,9 @@
         },
         "/logout": {
             "post": {
+                "tags": [
+                    "User"
+                ],
                 "summary": "Commit unalive",
                 "responses": {
                     "204": {
@@ -38,6 +74,9 @@
         },
         "/logup": {
             "post": {
+                "tags": [
+                    "User"
+                ],
                 "summary": "Create account",
                 "parameters": [
                     {
@@ -59,6 +98,9 @@
         },
         "/me": {
             "get": {
+                "tags": [
+                    "User"
+                ],
                 "summary": "See current user",
                 "responses": {
                     "200": {
@@ -72,6 +114,9 @@
         },
         "/profile-picture": {
             "get": {
+                "tags": [
+                    "User"
+                ],
                 "summary": "Retrieve profile picture",
                 "responses": {
                     "200": {
@@ -82,6 +127,9 @@
             "put": {
                 "consumes": [
                     "multipart/form-data"
+                ],
+                "tags": [
+                    "User"
                 ],
                 "summary": "Update profile picture",
                 "parameters": [
@@ -100,6 +148,9 @@
                 }
             },
             "delete": {
+                "tags": [
+                    "User"
+                ],
                 "summary": "Remove profile picture",
                 "responses": {
                     "204": {
@@ -151,6 +202,37 @@
                     "type": "string"
                 },
                 "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "main.UpdateDirectChatDto": {
+            "type": "object",
+            "required": [
+                "otherAccountId"
+            ],
+            "properties": {
+                "doBlock": {
+                    "type": "boolean"
+                },
+                "doFriend": {
+                    "type": "boolean"
+                },
+                "doMute": {
+                    "type": "boolean"
+                },
+                "doPin": {
+                    "type": "boolean"
+                },
+                "otherAccountId": {
+                    "type": "string"
+                }
+            }
+        },
+        "main.UpdateDirectChatResultDto": {
+            "type": "object",
+            "properties": {
+                "chatId": {
                     "type": "string"
                 }
             }
